--- a/packages/Recognizers/ConversationLanguageUnderstanding/js/tsconfig.json
+++ b/packages/Recognizers/ConversationLanguageUnderstanding/js/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "lib",
     "rootDir": "src",
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "resolveJsonModule": true
   }
 }
