--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "async@2": "^2.6.4",
     "async@3": "^3.2.4",
     "cross-fetch": "3.1.5",
+    "decode-uri-component": "0.2.1",
     "ejs": "3.1.8",
     "glob-parent": "5.1.2",
     "node-fetch": "2.6.7",
