--- a/packages/Recognizers/CustomQuestionAnswering/js/package.json
+++ b/packages/Recognizers/CustomQuestionAnswering/js/package.json
@@ -29,26 +29,26 @@
     ],
     "main": "lib/index.js",
     "dependencies": {
-        "adaptive-expressions": "~4.19.3",
-        "botbuilder": "~4.19.3",
-        "botbuilder-ai": "~4.19.3",
-        "botbuilder-dialogs": "~4.19.3",
-        "botbuilder-dialogs-adaptive-runtime": "~4.19.3-preview",
-        "botbuilder-dialogs-adaptive-runtime-core": "~4.19.3-preview",
-        "botbuilder-dialogs-adaptive-runtime-integration-express": "~4.19.3-preview"
+        "adaptive-expressions": "4.20.0",
+        "botbuilder": "4.20.0",
+        "botbuilder-ai": "4.20.0",
+        "botbuilder-dialogs": "4.20.0",
+        "botbuilder-dialogs-adaptive-runtime": "4.20.0-preview",
+        "botbuilder-dialogs-adaptive-runtime-core": "4.20.0-preview",
+        "botbuilder-dialogs-adaptive-runtime-integration-express": "4.20.0-preview"
     },
     "devDependencies": {
         "@tsconfig/recommended": "^1.0.1",
         "@types/lodash": "^4.14.168",
         "@typescript-eslint/eslint-plugin": "^4.28.2",
         "@typescript-eslint/parser": "^4.28.2",
-        "adaptive-expressions": "4.19.3",
-        "botbuilder": "4.19.3",
-        "botbuilder-dialogs": "4.19.3",
-        "botbuilder-dialogs-adaptive": "4.19.3-preview",
-        "botbuilder-dialogs-adaptive-runtime-core": "4.19.3-preview",
-        "botbuilder-dialogs-declarative": "4.19.3-preview",
-        "botframework-connector": "4.19.3",
+        "adaptive-expressions": "4.20.0",
+        "botbuilder": "4.20.0",
+        "botbuilder-dialogs": "4.20.0",
+        "botbuilder-dialogs-adaptive": "4.20.0-preview",
+        "botbuilder-dialogs-adaptive-runtime-core": "4.20.0-preview",
+        "botbuilder-dialogs-declarative": "4.20.0-preview",
+        "botframework-connector": "4.20.0",
         "eslint": "^7.30.0",
         "eslint-plugin-prettier": "latest",
         "lodash": "^4.17.21",
