--- a/packages/Teams/js/package.json
+++ b/packages/Teams/js/package.json
@@ -29,13 +29,13 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "peerDependencies": {
-    "adaptive-expressions": "~4.19.3",
-    "botbuilder": "~4.19.3",
-    "botbuilder-dialogs": "~4.19.3",
-    "botbuilder-dialogs-adaptive": "~4.19.3-preview",
-    "botbuilder-dialogs-adaptive-runtime-core": "~4.19.3-preview",
-    "botbuilder-dialogs-declarative": "~4.19.3-preview",
-    "botframework-connector": "~4.19.3",
+    "adaptive-expressions": "^4.20.0",
+    "botbuilder": "4.20.0",
+    "botbuilder-dialogs": "4.20.0",
+    "botbuilder-dialogs-adaptive": "4.20.0-preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "4.20.0-preview",
+    "botbuilder-dialogs-declarative": "4.20.0-preview",
+    "botframework-connector": "4.20.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -43,13 +43,13 @@
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
-    "adaptive-expressions": "4.19.3",
-    "botbuilder": "4.19.3",
-    "botbuilder-dialogs": "4.19.3",
-    "botbuilder-dialogs-adaptive": "4.19.3-preview",
-    "botbuilder-dialogs-adaptive-runtime-core": "4.19.3-preview",
-    "botbuilder-dialogs-declarative": "4.19.3-preview",
-    "botframework-connector": "4.19.3",
+    "adaptive-expressions": "4.20.0",
+    "botbuilder": "4.20.0",
+    "botbuilder-dialogs": "4.20.0",
+    "botbuilder-dialogs-adaptive": "4.20.0-preview",
+    "botbuilder-dialogs-adaptive-runtime-core": "4.20.0-preview",
+    "botbuilder-dialogs-declarative": "4.20.0-preview",
+    "botframework-connector": "4.20.0",
     "eslint": "^7.30.0",
     "eslint-plugin-prettier": "latest",
     "lodash": "^4.17.21",
